Fix template worlds not keeping world generator settings (#360)